welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:2: error: not found: value len
  var a = 0;for (i <- 0 to nums.length -1) {a= a + nums(i)};return a/(len(nums))} 
                                                                      ^